Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113251

[REG 6.4 -> 6.5] Context menu functionality in devtools broken

XMLWordPrintable

    • f7fdab662 (108-based), 6e644a1b9 (112-based), 1243b8043 (dev), 039b15444 (6.6), 381175792 (6.5)

      After using e.g. "Window -> Open inspector in new window" in simplebrowser, since Qt 6.5:

      • Left clicking the "»" when the window is too narrow opens the browser context-menu:

      • Right clicking a host under "cookies" in the application tab does so too:

      • Left clicking the [x] does nothing instead of closing the devtools:

      While on Qt 6.4:

      • Left clicking the "»" shows a menu with additional tools:

      • Right clicking a cookie host shows a "clear" item:

      • Clicking the [x] closes devtools.

        1. image-2023-04-27-15-27-23-355.png
          22 kB
          Florian Bruhin
        2. image-2023-04-27-15-27-34-721.png
          39 kB
          Florian Bruhin
        3. image-2023-04-27-15-27-42-890.png
          2 kB
          Florian Bruhin
        4. image-2023-04-27-15-27-54-041.png
          9 kB
          Florian Bruhin
        5. image-2023-04-27-15-28-19-268.png
          9 kB
          Florian Bruhin
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mnegyokru Martin Negyokru
            the compiler Florian Bruhin
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes