Fix devtools context menus

Set devtools custom menus on 'OnLoadCompleted' event.
This event should be triggered by the Js frontend
not by WebContentsObserver.

Fixes: QTBUG-113251
Change-Id: I815d818c5867d0f1d160a962be5a41a762699e00
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit 1243b80433d4a18bc57cf43ab29d02e6007261f3)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>