src/core/devtools_frontend_qt.h
@@ -55,18 +55,18 @@ private:
 
     // DevToolsUIBindings::Delegate overrides
     void ActivateWindow() override;
-    void InspectElementCompleted() override;
     void SetEyeDropperActive(bool active) override;
     void OpenInNewTab(const std::string &url) override;
     void InspectedContentsClosing() override;
+    void OnLoadCompleted() override;
 
+    void InspectElementCompleted() override{};
     void CloseWindow() override{};
     void Inspect(scoped_refptr<content::DevToolsAgentHost>) override{};
     void SetInspectedPageBounds(const gfx::Rect &) override{};
     void SetIsDocked(bool) override{};
     void SetWhitelistedShortcuts(const std::string &) override{};
     void OpenNodeFrontend() override{};
-    void OnLoadCompleted() override{};
     void ReadyForTest() override{};
     void ConnectionReady() override{};
     void SetOpenNewWindowForPopups(bool) override{};
